RESOLVED FIXED 43605
REGRESSION (r64712): YouTube video pages have contents of <noembed> elements overlapping the video description
https://bugs.webkit.org/show_bug.cgi?id=43605
Summary REGRESSION (r64712): YouTube video pages have contents of <noembed> elements ...
Mark Rowe (bdash)
Reported 2010-08-05 21:00:37 PDT
After r64712 YouTube video pages, such as the one at <http://www.youtube.com/watch?v=z2nQZPC2uTs>, have some white text visible on top of the video description area. The web inspector shows that the visible text appears to be the contents of a <noembed> element that is present in the page.
Attachments
Patch (4.33 KB, patch)
2010-08-05 23:54 PDT, Adam Barth
no flags
Patch (4.29 KB, patch)
2010-08-05 23:57 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-08-05 21:03:31 PDT
Crazy. Investigating.
Adam Barth
Comment 2 2010-08-05 22:25:35 PDT
We're correctly swallowing the contents as text, but we're rendering it when we shouldn't be. We need to teach the noembed element to not render itself.
Adam Barth
Comment 3 2010-08-05 23:05:47 PDT
Building a possible patch now.
Adam Barth
Comment 4 2010-08-05 23:54:32 PDT
Adam Barth
Comment 5 2010-08-05 23:57:01 PDT
Adam Barth
Comment 6 2010-08-05 23:57:33 PDT
I verified that we're handling nolayer correctly.
Adam Barth
Comment 7 2010-08-06 00:13:06 PDT
Eric Seidel (no email)
Comment 8 2010-08-06 13:17:04 PDT
Comment on attachment 63701 [details] Patch OK. Why wouldn't this be part of HTMLEmbedElement:: rendererIsNeeded instead?
Adam Barth
Comment 9 2010-08-06 14:38:41 PDT
> OK. Why wouldn't this be part of HTMLEmbedElement:: rendererIsNeeded instead? Because it's the noembed element :) (There is no HTMLNoembedElement.)
Adam Barth
Comment 10 2010-08-06 18:56:19 PDT
Comment on attachment 63701 [details] Patch Clearing flags on attachment: 63701 Committed r64890: <http://trac.webkit.org/changeset/64890>
Adam Barth
Comment 11 2010-08-06 18:56:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.