2010-08-06  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        REGRESSION (r64712): YouTube video pages have contents of <noembed> elements overlapping the video description
        https://bugs.webkit.org/show_bug.cgi?id=43605

        Show test progression.  We missed this regression when analyzing the
        expectation diffs because the DOM was correct and was a progression.

        * fast/dom/no-elements-expected.txt:
        * platform/mac/fast/parser/nofoo-tags-inside-paragraph-expected.txt:
2010-08-06  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        REGRESSION (r64712): YouTube video pages have contents of <noembed> elements overlapping the video description
        https://bugs.webkit.org/show_bug.cgi?id=43605

        The old parser used to drop <noembed> on the floor.  We're supposed to
        add it to the DOM, but we don't want to create a renderer for it.

        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::rendererIsNeeded):

Canonical link: https://commits.webkit.org/55703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64890 268f45cc-cd09-0410-ab3c-d52691b4dbfc